test_suite/tests/ui/string/sanitize/unknown.stderr
error: Unknown field: `cleanup`
 --> tests/ui/string/sanitize/unknown.rs:3:19
  |
3 | #[nutype(sanitize(cleanup = true))]
  |                   ^^^^^^^
